--- a/.github/workflows/sonarmain.yml
+++ b/.github/workflows/sonarmain.yml
@@ -16,5 +16,7 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.SONAR_WITH_CODE_GURU }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
