--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.organization=cloudandcloud2020
-sonar.projectKey=cloudandcloud2020_fun--with-code-guru
+#sonar.projectKey=cloudandcloud2020_fun--with-code-guru
+<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
