--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<sonar.organization>cloudandcloud2020</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
   <dependencies>
   	<dependency>
@@ -37,6 +39,7 @@
   			<artifactId>maven-shade-plugin</artifactId>
   			<version>3.2</version>
   		</plugin>
+		
   	</plugins>
   </build>
 </project>
